--- a/package.json
+++ b/package.json
@@ -18,7 +18,7 @@
     "@vue/compiler-sfc": "^3.0.0-0",
     "babel-eslint": "^10.1.0",
     "eslint": "^7.9.0",
-    "eslint-plugin-vue": "^6.2.2",
+    "eslint-plugin-vue": "^7.0.0-beta.3",
     "fibers": "^5.0.0",
     "sass": "^1.26.10",
     "sass-loader": "^10.0.2"
