--- a/client/package.json
+++ b/client/package.json
@@ -9,8 +9,10 @@
   },
   "dependencies": {
     "axios": "^0.20.0",
+    "bootstrap": "^4.5.3",
+    "bootstrap-vue": "^2.18.0",
     "core-js": "^3.6.5",
-    "vue": "^3.0.0-0",
+    "vue": "^2.6.12",
     "vuex": "^4.0.0-beta.4"
   },
   "devDependencies": {
