--- a/client/package.json
+++ b/client/package.json
@@ -12,8 +12,7 @@
     "core-js": "^3.6.5",
     "vue": "^3.0.0-0",
     "vuex": "^4.0.0-beta.4",
-    "bootstrap": "^4.5.3",
-    "bootstrap-vue": "^2.18.0"
+    "bootstrap": "^4.5.3"
   },
   "devDependencies": {
     "@vue/cli-plugin-babel": "~4.5.0",
