--- a/client/package.json
+++ b/client/package.json
@@ -9,10 +9,10 @@
   },
   "dependencies": {
     "axios": "^0.20.0",
+    "bootstrap": "^4.5.3",
     "core-js": "^3.6.5",
     "vue": "^3.0.0-0",
-    "vuex": "^4.0.0-beta.4",
-    "bootstrap": "^4.5.3"
+    "vuex": "^4.0.0-beta.4"
   },
   "devDependencies": {
     "@vue/cli-plugin-babel": "~4.5.0",
