--- a/package.json
+++ b/package.json
@@ -5,7 +5,7 @@
   "author": "Oleg Popovych <magmoba@gmail.com>",
   "license": "MIT",
   "scripts": {
-    "start": "concurrently \"npm yarn run-server\" \"yarn run-client\"",
+    "start": "concurrently \"yarn run-server\" \"yarn run-client\"",
     "run-server": "cd ./server & yarn start",
     "run-client": "cd ./client & yarn start"
   },
