--- a/package.json
+++ b/package.json
@@ -6,7 +6,7 @@
   "license": "MIT",
   "scripts": {
     "start": "concurrently \"yarn run-server\" \"yarn run-client\"",
-    "run-server": "cd ./server & yarn start",
+    "run-server": "cd ./server & yarn develop",
     "run-client": "cd ./client & yarn start"
   },
   "dependencies": {
